tests/semantic/valid/07_mixed.src
fn main() -> float {
    int a = 5;
    float b = 2.5;
    return a + b;
}
