tests/semantic/invalid/02_undeclared_expr.src
fn main() -> int {
    int a = 5;
    return a + unknown;
}
